# slopless_embeddings

./: .gitignore  Cargo.toml  getmodel.py  readme.md
src/: main.rs  mainold.rs
